--- a/styl.css
+++ b/styl.css
@@ -32,7 +32,7 @@ margin-top: 100px; }
  
  
  
-.knopka { background-color: #ffcd1a;
+.knopka_zp { background-color: #ffcd1a;
  border-radius: 100px;
  display:inline-block;
  border-radius: 15px;
